# LIA-RR

./: CMakeLists.txt  main.cpp
AnalizadorLIA/: main.cpp  main.h
Docs/: archivo.lia  mainSeparados.cpp  sintaxis.lia
Docs/matrices/: Matrices LIA - Predictiva.csv  Matrices LIA - Producciones.csv  Matrices LIA - Transiciones.csv  Matrices LIA.ods
